# AuxMet-backend-bot

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt  rough.ipynb  serverside running with systemd  serverside_handling.md  why not used python for backend.md
logs/Audio_to_text/: debug.log.2025-08-23  info.log.2025-08-22
logs/mongodbconnection/: debug.log.2025-08-22  debug.log.2025-08-23
logs/question_answer/: debug.log.2025-08-22  debug.log.2025-08-23
logs/redis_logs/: debug.log.2025-08-22  debug.log.2025-08-23
logs/startup/: debug.log.2025-08-22  debug.log.2025-08-23
logs/summary_agent/: info.log.2025-08-22  info.log.2025-08-23
src/: app.py  constants.py  logs.py  main.py
src/controllers/: chat_controller.py
src/dataModels/: QAModel.py
src/db/: mongodbconnection.py  redisdb.py
src/middleware/: auth_middleware.py  verify_session.py
src/models/: audioText.py  question_agent.py  summary_agent.py  textSpeech.py  validate_agent.py
src/prompts/: prompts_.py
src/router/: conversation_socket.py  interview_router.py
src/schema/: Message_Summary.model.py
src/utils/: ApiErrorHandler.py  tools.py
